Deployments/demo-nginx-hpa-ingress/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-ingress-nginx-service
  namespace: demo-ingress-nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
